@@ -1,7 +1,5 @@
-/*
- * Farsight
- * GStreamer GSM decoder (uses WAV49 compiled libgsm)
- * Copyright (C) 2005 Philippe Khalaf <burger@speedy.org>
+/* GStreamer
+ * Copyright (C) <1999> Erik Walthinsen <omega@cse.ogi.edu>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
